一些更正和通过xib创建自定义TableViewCell

--- a/Apple/通过代理模式监听自定义空间中的按钮点击.md
+++ b/Apple/通过代理模式监听自定义空间中的按钮点击.md
@@ -8,7 +8,7 @@
 
 通常在自定义view的声明前声明协议。
 
-Object-C:
+objective-c:
 
     @class ZhuApp,appView; //如果协议方法需要空间变量时，通过@class提前声明
     @protocol ZhuAppDelegate <NSObject>   //协议名一般为控件名＋Delegate
@@ -18,14 +18,14 @@ Object-C:
     
 
 ###在控件的头文件中声明委托的属性
-Object-C:
+objective-c:
 
     @property(weak,nonatomic) id<ZhuAppDelegate> delegate;
     
     
 ###控件实现文件中通过委托设置协议方法（以button点击为例）
 
-Object-C:
+objective-c:
 
     - (IBAction)downloadBtn
     {
@@ -38,19 +38,19 @@ Object-C:
 ##控制器方面
 
 ###在声明中声明协议
-Object-C:
+objective-c:
 
     @interface ViewController ()<ZhuAppDelegate>
     
 ###控件对像将委托属性设置给控制器对象（也可通过连线设置）
-Object-C:
+objective-c:
    
     appViews.delegate = self;
     
     
 ###重写协议中的方法。当对空间进行相应操作时，控件将通过协议，调用协议中的方法
 
-Object-C:
+objective-c:
     
     -(void)onClickBtn:(appView *)appView
     {
