通知中心，程序启动

--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -6,3 +6,17 @@
 
     某些非空变量设置为nil，如[UIImage imageName:xxx]中 xxx为nil
 
+
+警告
+```Property access result unused - getters should not be used for side effects```
+
+    不推荐此方法通过对象属性的get方法进行调用
+    
+崩溃警告
+
+```loaded some nib but the view outlet was not set```
+
+    我们加载的nib文件，"view" 属性值没有进行设置.
+    
+    处理，在要加载的xib文件中，设置File's Owner的“Custom Class” 属性，
+    将 Class 的值改成对应的控制器，并将File's Owner 于对应加载的view进行连线。
