多线程／核心动画／Block修正

--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -12,6 +12,11 @@
 
     不推荐此方法通过对象属性的get方法进行调用
     
+    
+```unexpected nil window in _UIApplicationHandleEventFromQueueEvent, _windowServerHitTestWindow: ```
+
+    意外的空window，//没有设着UIWindow的frame
+    
 崩溃警告
 
 ```loaded some nib but the view outlet was not set```
@@ -20,3 +25,6 @@
     
     处理，在要加载的xib文件中，设置File's Owner的“Custom Class” 属性，
     将 Class 的值改成对应的控制器，并将File's Owner 于对应加载的view进行连线。
+    
+    
+    
