--- a/Apple/数据存储.md
+++ b/Apple/数据存储.md
@@ -43,9 +43,9 @@
    1. ` NSString *home = NSHomeDirectory(); `   
    2. `NSString *documents = [home stringByAppendingPathComponent:@"Documents"];`   
  * 利用NSSearchPathForDirectoriesInDomains函数 
-   1. `NSArray *array =  NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, NO);`   
+   1. `NSArray *array =  NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES);`   
       * NSUserDomainMask 代表从用户文件夹下找
-      * YES 代表展开路径中的波浪字符“~”      
+      * YES 代表展开路径中的波浪字符“~”  //必须展开。。。     
    2. `NSString *documents = [array objectAtIndex:0];` //在iOS中，只有一个目录跟传入的参数匹配，所以这个集合里面只有一个元素 
    
      
