错误处理／整理

--- a/Apple/常见警告/低级警告.md
+++ b/Apple/常见警告/低级警告.md
@@ -6,3 +6,41 @@
 > duplicate declaration of method ／副本，复制的／宣告，说明
 
         方法重复声明。
+        
+        
+       
+       
+       
+> Xcode6编译SDWebImage报错解决方法(SDWebImageDownloaderOperation.m错误)
+> 
+> 报错：Use of undeclared identifier '_executing' / '_finished'；
+
+
+
+ [转自Xoneday](http://blog.xoneday.com)
+ 
+ [文章地址](http://blog.csdn.net/cuibo1123/article/details/39434015)
+ 
+    '_executing' / '_finished'未被生命
+    解决方法：
+
+    在SDWebImageDownloaderOperation类的实现中(@implementation里)添加：
+   
+    @synthesize executing = _executing ;  
+    @synthesize finished = _finished; 
+    
+    即可。
+    
+    原因：
+    executing声明的输出口上有个附加的名称，这样在xcode6上就不生成默认的_executing成员
+    
+    原程序
+    @property (assign, nonatomic, getter = isExecuting) BOOL executing;
+    @property (assign, nonatomic, getter = isFinished) BOOL finished;
+    
+    
+> Cannot find executable for CFBundle
+
+    CFBundle不能执行
+    
+    解决方案，初始化模拟器。
