--- a/Apple/控制器管理/有关程序的启动.md
+++ b/Apple/控制器管理/有关程序的启动.md
@@ -74,7 +74,7 @@ objective－c:
 6. Bundle identifier(CFBundleIdentifier)-项目的唯一标识，部署到真机时用到
 
 
-###pch文件
+###pch文件[参考](http://www.cnblogs.com/YouXianMing/p/3989155.html)
 XCode 6.0 默认去处pch文件，需手动设置。
 
 1. pch头文件的内容能被项目中的其他所有源文件共享和访问
