--- a/Apple/控制器管理/有关程序的启动.md
+++ b/Apple/控制器管理/有关程序的启动.md
@@ -80,7 +80,9 @@ XCode 6.0 默认去处pch文件，需手动设置。
 1. pch头文件的内容能被项目中的其他所有源文件共享和访问
 2. 一般在pch文件中定义一些全局的宏
 3. 在pch文件中添加下列预处理指令，然后在项目中使用Log(…)来输出日志信息，就可以在发布应用的时候，一次性将NSLog语句移除（在调试模式下，才有定义DEBUG）
-
+    
+    项目根目录 $(SRCROOT)
+    
     objective-c :
 
         #ifdef DEBUG
