--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -17,6 +17,20 @@
 
     意外的空window，//没有设着UIWindow的frame
     
+    
+```Attempting to badge the application icon but haven't received permission from the user to badge the application```
+
+    企图修改应用图标的数字，当没有足够的权限
+    
+    原因是因为在ios8中，设置应用的application badge value需要得到用户的许可。使用如下方法咨询用户是否许可应用设置application badge value
+
+    UIUserNotificationSettings *settings = 
+       [UIUserNotificationSettings settingsForTypes:UIUserNotificationTypeBadge categories:nil];
+    [[UIApplication sharedApplication] registerUserNotificationSettings:settings];
+    
+    在这之前要判断系统是否为iOS8的系统，否则8之前的系统会报错。
+    
+    
 崩溃警告
 
 ```loaded some nib but the view outlet was not set```
