--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -40,5 +40,12 @@
     处理，在要加载的xib文件中，设置File's Owner的“Custom Class” 属性，
     将 Class 的值改成对应的控制器，并将File's Owner 于对应加载的view进行连线。
     
-    
+   
+```unrecognized selector sent to instance```
+
+     未被指定的指示器被使用的情况
+     具体是引用的实例的方法不存在了或者这个方法在类中没有实现
+     
+     大部分情况下是因为对象被提前release了，在你心里不希望它release的情况下，指针还在(已经是野指针了)，对象已经不在了。
+     也可能是因为你所调用的对象根本就不存在某个方法，通常的原因是因为你错误地将A类的实例当成B类实例来使用。
     
