--- a/Apple/UIView/手势识别器.md
+++ b/Apple/UIView/手势识别器.md
@@ -34,6 +34,21 @@
 
 0. 通用属性，由于手势识别器继承自UIGestureRecognizer，其子类的对象可以调用其中的某些方法，获得用户触摸的状态，位置。
 
+    属性:
+    
+        state  //当前手势的状态(readonly) 可以在设置方法中用此限制手势的触发情况，例如，方法仅在一开始执行。
+        enabled //是否禁用手势
+        view //设置的view
+        cancelsTouchesInView //当手势触发时，是否通知给当前view（YES）
+        delaysTouchesBegan // 当手势触发开始时，是否推迟通知（NO）
+        delaysTouchesEnded // 当手势触发结束时，是否推迟通知(YES)
+        
+        - (void)requireGestureRecognizerToFail:(UIGestureRecognizer *)otherGestureRecognizer; //让某个手势失效
+        - (CGPoint)locationInView:(UIView*)view; //获取当前view上的位置
+        - (NSUInteger)numberOfTouches; //当前的触控点数
+        - (CGPoint)locationOfTouch:(NSUInteger)touchIndex inView:(UIView*)view;
+        //某一个具体的触控点的位置
+        
 
 1. UITapGestureRecognizer 敲击手势。
 
