桥接／音频处理

--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -48,4 +48,12 @@
      
      大部分情况下是因为对象被提前release了，在你心里不希望它release的情况下，指针还在(已经是野指针了)，对象已经不在了。
      也可能是因为你所调用的对象根本就不存在某个方法，通常的原因是因为你错误地将A类的实例当成B类实例来使用。
+     
+     
+运行警告
+
+```exc_bad_access错误```
+
+    基本上是由于内存泄漏，错误释放，对一个已经释放的对象进行release操作。
+
     
