--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -28,7 +28,7 @@
        [UIUserNotificationSettings settingsForTypes:UIUserNotificationTypeBadge categories:nil];
     [[UIApplication sharedApplication] registerUserNotificationSettings:settings];
     
-    在这之前要判断系统是否为iOS8的系统，否则8之前的系统会报错。
+    在这之前要判断系统是否为iOS8的系统，否则之前的系统会报错。
     
     
 崩溃警告
@@ -50,6 +50,27 @@
      也可能是因为你所调用的对象根本就不存在某个方法，通常的原因是因为你错误地将A类的实例当成B类实例来使用。
      
      
+[可参考哈希Map的博文](http://blog.csdn.net/h3c4lenovo/article/details/8556887)
+    
+```[<NSObject 0x8a4b500> setValue:forUndefinedKey:]: this class is not key value coding-compliant for the key strss.'```  
+
+    [[UINib nibWithNibName:@"WheelView" bundle:nil] instantiateWithOwner:nil options:nil] 执行这步时出错，解决方案，查看Xib 的file‘s owner 的custom class是否设置属性，或者查看是否连线
+ 
+ 
+ 
+```Cannot create an NSPersistentStoreCoordinator with a nil model```
+
+    不能创建NSPersistentStoreCoordinator通过一个空的模型
+    
+    原因，没有在资源文件包中找到.momd文件，进而获取到模型
+    
+    
+    - (NSManagedObjectModel *)managedObjectModel中的
+    出错代码 ：NSURL *modelURL = [[NSBundle mainBundle] URLForResource:@"MyData" withExtension:@"momd"];
+    
+    将资源文件名对应。
+    
+ 
 运行警告
 
 ```exc_bad_access错误```
