segue／消息机制／containerViewController

--- a/Apple/常见警告/低级警告.md
+++ b/Apple/常见警告/低级警告.md
@@ -44,3 +44,10 @@
     CFBundle不能执行
     
     解决方案，初始化模拟器。
+    
+    
+> objc_msgSend() too many arguments in function call（参数错误）
+
+    XCode 开启了 Strict Checking of objc_msgsend calls 选项
+    解决方案：在Project - Build Settings-Apple LLVM 6.0-Preprocessing 中的
+    Enable Strict Checking of objc_msgsend calls 设置为 NO
