--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -15,7 +15,7 @@
     
 ```unexpected nil window in _UIApplicationHandleEventFromQueueEvent, _windowServerHitTestWindow: ```
 
-    意外的空window，//没有设着UIWindow的frame
+    意外的空window，//没有设着UIWindow的frame/window为nil
     
     
 ```Attempting to badge the application icon but haven't received permission from the user to badge the application```
@@ -70,6 +70,12 @@
     
     将资源文件名对应。
     
+    
+```The view hierarchy is not prepared for the constraint: ```
+
+    这个view的等级不适用这个约束。
+    约束添加的view错误。
+    纠正，将约束添加到正确的约束对象身上去
  
 运行警告
 
