--- a/Apple/设计模式/通知中心.md
+++ b/Apple/设计模式/通知中心.md
@@ -7,7 +7,7 @@
 ### 通知中心NSNotificationCenter
 
 * 一个完整的通知一般包含3个属性:
-        
+
         (NSString *)name; // 通知的名称
         (id)object; // 通知发布者(是谁要发布通知)
         (NSDictionary *)userInfo; // 一些额外的信息(通知发布者传递给通知接收者的信息内容)
@@ -22,6 +22,10 @@
 * 发布通知
 
 通知中心(NSNotificationCenter)提供了相应的方法来帮助发布通知
+
+###注意⚠
+    发布同之前确保已经有观察者已经注册监听。
+    NSNotificationCenter 使用defaultCenter创建单例对象
 
 objective-c:
 
@@ -45,15 +49,15 @@ objective-c :
     aSelector：收到通知后，回调监听器的这个方法，并且把通知对象当做参数传入
     aName：通知的名称。如果为nil，那么无论通知的名称是什么，监听器都能收到这个通知
     anObject：通知发布者。如果为anObject和aName都为nil，监听器都收到所有的通知
-    
-    
+
+
     - (id)addObserverForName:(NSString *)name object:(id)obj queue:(NSOperationQueue *)queue usingBlock:(void (^)(NSNotification *note))block;
     name：通知的名称
     obj：通知发布者
     block：收到对应的通知时，会回调这个block
-    queue：决定了block在哪个操作队列中执行，如果传nil，默认在当前操作队列中同步执行    
-    
-    
+    queue：决定了block在哪个操作队列中执行，如果传nil，默认在当前操作队列中同步执行
+
+
 * 取消注册通知监听器
 
 通知中心不会保留(retain)监听器对象，在通知中心注册过的对象，必须在该对象释放前取消注册。否则，当相应的通知再次出现时，通知中心仍然会向该监听器发送消息。因为相应的监听器对象已经被释放了，所以可能会导致应用崩溃
@@ -71,8 +75,8 @@ objective-c:
 	    //[super dealloc];  非ARC中需要调用此句
         [[NSNotificationCenter defaultCenter] removeObserver:self];
     }
-    
-    
+
+
 * UIDevice通知
 
 UIDevice类提供了一个单例对象，它代表着设备，通过它可以获得一些设备相关的信息，比如电池电量值(batteryLevel)、电池状态(batteryState)、设备的类型(model，比如iPod、iPhone等)、设备的系统(systemVersion)
@@ -97,7 +101,7 @@ objective-c:
         UIKeyboardDidHideNotification // 键盘隐藏完毕
         UIKeyboardWillChangeFrameNotification // 键盘的位置尺寸即将发生改变
         UIKeyboardDidChangeFrameNotification // 键盘的位置尺寸改变完毕
-        
+
         系统发出键盘通知时,会附带一下跟键盘有关的额外信息(字典),字典常见的key如下:
         UIKeyboardFrameBeginUserInfoKey // 键盘刚开始的frame
         UIKeyboardFrameEndUserInfoKey // 键盘最终的frame(动画执行完毕后)
