--- a/Apple/执行顺序.md
+++ b/Apple/执行顺序.md
@@ -2,32 +2,51 @@
 
 <!-- create time: 2014-10-29 21:59:02  -->
 
-    + (void)initialize   
+    + (void)initialize
     //一般一个类第一次创建时调用（一定）
-    
-    - (instancetype)initWithCoder:(NSCoder *)aDecoder 
+
+    - (instancetype)initWithCoder:(NSCoder *)aDecoder
     //当是从文件解析创建时调用(从storyboardd/xib文件解析时)
-    
+
     - (instancetype)initWithFrame:(CGRect)frame
     //当是通过代码创建时调用（控制器无此方法）,init方法执行时也会调用
-    
+
     - (instancetype)init
     //调用init方法时。//此时frame无值，适合一些非frame的初始化操作
-    
-    
+
+
     - (void)viewDidLoad
     //当view加载完毕时／frame有值
-    
-    
+
+
     - (void)dealloc
     //当对象被销毁时调用，当循环引用时，无法调用此方法
-    
-    
-    
-    - (CGFloat)tableView:(UITableView *)tableView 
+
+
+
+    - (CGFloat)tableView:(UITableView *)tableView
             heightForRowAtIndexPath:(NSIndexPath *)indexPath;
-            
+
     //设定每个cell的高度，先于数据源方法执行。
+
+
+
+    1. 由xib 跳转到 storyboard
+    
+    先执行:
+
+        UIStoryboard *mainStoryboard = [UIStoryboard storyboardWithName:@"Main" bundle:nil];
+        [UIApplication sharedApplication].keyWindow.rootViewController = (UITabBarController *)[mainStoryboard instantiateInitialViewController];
+
+    然后执行mainStoryboard的根控制器的 viewDidLoad()
+
+    最后在执行跳转控制器的-(void)dealloc() 销毁控制器
     
     
-    
+    2. 同理如果只有main.storyboard
+        也是在AppDelegate中也是，先执行main.storyboard根控制器的viewDidLoad()
+        再会执行代理方法的didFinishLaunchingWithOptions()
+        
+        
+    记住调用顺序，对于设置NSNotificationCenter很重要。
+    先设置观察者，再发送通知。
