--- a/Apple/执行顺序.md
+++ b/Apple/执行顺序.md
@@ -2,6 +2,8 @@
 
 <!-- create time: 2014-10-29 21:59:02  -->
 
+##基础
+
     + (void)initialize
     //一般一个类第一次创建时调用（一定）
 
@@ -30,6 +32,7 @@
     //设定每个cell的高度，先于数据源方法执行。
 
 
+##由xib 跳转到 storyboard
 
     1. 由xib 跳转到 storyboard
     
@@ -45,8 +48,19 @@
     
     2. 同理如果只有main.storyboard
         也是在AppDelegate中也是，先执行main.storyboard根控制器的viewDidLoad()
+        
         再会执行代理方法的didFinishLaunchingWithOptions()
         
         
     记住调用顺序，对于设置NSNotificationCenter很重要。
     先设置观察者，再发送通知。
+    
+    
+    
+##有关tableview的启动顺序
+
+    setContentOffset  //设置tableviewcell的位置
+    viewWillAppear  //view即将显示
+    setContentOffset  //修正tableviewcell的位置
+    viewDidLayoutSubviews  //view 加载到subview
+    viewDidAppear  //view已经显示
