--- a/Apple/执行顺序.md
+++ b/Apple/执行顺序.md
@@ -45,7 +45,6 @@
 
     最后在执行跳转控制器的-(void)dealloc() 销毁控制器
     
-    
     2. 同理如果只有main.storyboard
         也是在AppDelegate中也是，先执行main.storyboard根控制器的viewDidLoad()
         
@@ -64,3 +63,13 @@
     setContentOffset  //修正tableviewcell的位置
     viewDidLayoutSubviews  //view 加载到subview
     viewDidAppear  //view已经显示
+
+##Tableview 的代理执行顺序
+
+转自[UITableView 滚动流程性优化](http://www.cocoachina.com/industry/20140210/7792.html)
+
+    1、向代理要 number Of Rows。
+    2、对于每行向代理要 height For Row At Index Path。
+    3、向代理要 当前屏幕可见的 cell For Row At Index Path 。
+    （实测显示4寸屏的手机会取 屏幕显示数量+2，3.5寸屏同4寸屏数量，虽然3.5寸屏可显示的cell 数量要小于 4寸屏！）
+    4、然后 cell 就显示出来了。
