--- a/Apple/常用的第三方框架.md
+++ b/Apple/常用的第三方框架.md
@@ -2,11 +2,25 @@
 
 <!-- create time: 2014-11-27 00:19:03  -->
 
-##AFNetworking  网络连接
-##fmdb     数据库存储
-##MBProgressHUD  HUD提示
-##SDWebImage  网络图片加载
-##FLKAutoLayout  自动约束布局
-##ocmock   单元测试（模拟对象）
-##Pop Facebook开源动画框架
-##RegexKit 正则表达式
+##AFNetworking  
+    网络连接
+##fmdb     
+    数据库存储
+##MBProgressHUD  
+    HUD提示
+##SDWebImage  
+    网络图片加载
+##FLKAutoLayout  
+    自动约束布局
+##ocmock   
+    单元测试（模拟对象）
+##Pop 
+    Facebook开源动画框架
+##RegexKit 
+    正则表达式
+##LBBlurredImage  
+    UIImageView category,使图片模糊
+##TSMessages 
+    在屏幕顶部显示提示通知
+##Mantle 
+    把JSON原始数据(strings, ints, floats)转换为复杂数据，比如NSDate, NSURL, 甚至是自定义类。
