宏／代码风格指南

--- a/Apple/执行顺序.md
+++ b/Apple/执行顺序.md
@@ -3,10 +3,15 @@
 <!-- create time: 2014-10-29 21:59:02  -->
 
 ##基础
+[Ider 的 Objective C类方法load和initialize的区别](http://www.cnblogs.com/ider/archive/2012/09/29/objective_c_load_vs_initialize.html)
 
     + (void)initialize
     //一般一个类第一次创建时调用（一定）
-
+	可看作类加载的延时加载方法。类加载后并不执行该方法。只有当实例化该类的实例的时候，才会在第一个实例加载前执行该方法
+	
+	+ (void)load;
+	//一般一个类第一次创建时调用（一定）
+	load，是加载类的时候，这里是Constants类，就会调用。也就是说，ios应用启动的时候，就会加载所有的类，就会调用这个方法。
     - (instancetype)initWithCoder:(NSCoder *)aDecoder
     //当是从文件解析创建时调用(从storyboardd/xib文件解析时)
 
