--- a/Apple/常用的第三方框架.md
+++ b/Apple/常用的第三方框架.md
@@ -24,3 +24,11 @@
     在屏幕顶部显示提示通知
 ##Mantle 
     把JSON原始数据(strings, ints, floats)转换为复杂数据，比如NSDate, NSURL, 甚至是自定义类。
+
+##XMPPFramework
+	基于XMPP通讯的objc框架
+
+##Kiwi
+
+	基于行为驱动开发（BDD）的测试框架
+#####[TDD的iOS开发初步以及Kiwi使用入门](http://ios.jobbole.com/60360/)
