--- a/Apple/常见警告/执行警告.md
+++ b/Apple/常见警告/执行警告.md
@@ -83,4 +83,20 @@
 
     基本上是由于内存泄漏，错误释放，对一个已经释放的对象进行release操作。
 
-    
+ 
+##CoreData
+
+###Swift 中问题
+   
+```Unable to load class named 'TestEntity' for entity 'TestEntity'.  Class not found, using default NSManagedObject instead.```
+
+[coredata swift 简单入门](http://www.zoejblog.com/ioscoredata-swift-jian-dan-ru-men/)
+
+	数据模型Entity找不到对应的类，在对应的Entity的属性中，将路径补全 即 项目名.类名
+
+或
+	
+	var newperson:TestEntity = NSEntityDescription.insertNewObjectForEntityForName("TestEntity", inManagedObjectContext: context!) as TestEntity
+        var error:NSError?
+        newperson.name="helo"
+        newperson.phonenum=234
