--- a/Apple/常用的第三方框架.md
+++ b/Apple/常用的第三方框架.md
@@ -32,3 +32,9 @@
 
 	基于行为驱动开发（BDD）的测试框架
 #####[TDD的iOS开发初步以及Kiwi使用入门](http://ios.jobbole.com/60360/)
+
+
+##Magical Record
+
+	对Core Data的封装，是Core Data 使用更简洁
+#####[jiangshurunhe的coredata 及 Magical Record](http://blog.csdn.net/jiangshurunhe/article/details/10304309)
