new file:   Apple/ReactiveCocoa.md 	modified:   "Apple/\345\237\272\347\241\200/OS X \347\273\210\347\253\257\346\214\207\344\273\244.md" 	modified:   "Apple/\345\237\272\347\241\200/\351\227\256\351\242\230\346\200\273\347\273\223.md" 	new file:   "C\357\274\217C++/Clang | gcc | g++.md" 	new file:   "C\357\274\217C++/C\345\272\223\345\207\275\346\225\260.md" 	new file:   "Swift/Closures\357\274\210\351\227\255\345\214\205\357\274\211.md" 	renamed:    "Apple/\345\237\272\347\241\200/Objc \345\222\214 Swift \344\271\213\351\227\264\347\232\204\346\241\245\346\216\245.md" -> "Swift/Objc \345\222\214 Swift \344\271\213\351\227\264\347\232\204\346\241\245\346\216\245.md" 	new file:   "Swift/Properties\357\274\210\346\210\220\345\221\230\345\261\236\346\200\247\357\274\211.md" 	renamed:    Apple/Swift.md -> Swift/Swift.md

--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -22,3 +22,56 @@
 
 	[self.tableView deleteRowsAtIndexPaths:[NSArray arrayWithObject:indexPath] withRowAnimation:UITableViewRowAnimationBottom];
     [self.tableView insertRowsAtIndexPaths:[NSArray arrayWithObject:newIndexPath] withRowAnimation:UITableViewRowAnimationTop];
+    
+##问题00003 __关于CocoaPods requires your terminal to be using UTF-8 encoding.
+
+处理：把Podfile的编码改为utf8，在运行相关pod命令前执行export LANG=en_US.UTF-8，或者直接加到shell相关配置的地方都可以。
+
+##问题00004 __关于UITextField的Value改变时，KVO失效(IOS 8)
+
+Apple关于KVO的文档有如下声明:
+Although the classes of the UIKit framework generally do not support KVO, you can still implement it in the custom objects of your application, including custom views.
+
+虽然UIKit框架中普遍不支持KVO，你仍然可以在你的应用里自定义对象中包括这些View
+
+监听UITextField 变化的方法:
+
+* addTarget:action:forControlEvents: (RAC中用此解决)
+* NSNotificationCenter
+
+
+
+##问题00005 __C语言指针 Array type 'char [20]' is not assignable
+
+[c语言与指针](http://blog.csdn.net/cooljune/article/details/18809179)
+
+    char temp[20];
+    temp = "zylcold" //Error  Array type 'char [20]' is not assignable
+错误原因是temp是一个常量，代表数组地址即第一个元素的地址，我们不能对一个常量进行赋值
+     
+    char *temp = "zylcold";
+    temp = "Hello"; //Error!
+    temp = 'A'; // Error!
+    
+解决: C语言库函数 strcpy() / stmcpy()
+
+    strcpy(temp, "Hello World");
+    
+##问题00006 __C++11中关于char * 和 string转换
+
+    char *demo[] = {"zylcold", "hello"};
+    //Error! ISO C++11 does not allow conversion from string literal to 'char *'
+    
+ 改正:
+ 
+    string demo[] = {"zylcold", "hello"};
+    
+##问题00007 __too few template arguments for class template 'map'
+    
+    
+    //提示
+    map<string , int>mapstring;
+    template is declared here
+    template <class, class, class, class> friend class _LIBCPP_TYPE_VIS_ONLY map;
+    
+    没有导入<map>头文件
