--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -75,3 +75,14 @@ Although the classes of the UIKit framework generally do not support KVO, you ca
     template <class, class, class, class> friend class _LIBCPP_TYPE_VIS_ONLY map;
     
     没有导入<map>头文件
+	
+##问题00008 __Unsupported URL in NSURLRequest
+
+	Try adding http:// to the start of the URL
+	
+	
+##问题00009 __修改UINavigationController title 字体的颜色
+
+	self.navigationController.navigationBar.titleTextAttributes = @{
+	                                                                 NSForegroundColorAttributeName : [NSColor redColor]
+	                                                                };
