--- a/Apple/常用的第三方框架.md
+++ b/Apple/常用的第三方框架.md
@@ -38,3 +38,11 @@
 
 	对Core Data的封装，是Core Data 使用更简洁
 #####[jiangshurunhe的coredata 及 Magical Record](http://blog.csdn.net/jiangshurunhe/article/details/10304309)
+
+##BlocksKit
+
+	对Cocoa中代理的封装，以block形式执行，减少代码的分散程度
+	
+##MarqueeLabel
+
+	滚动Label
