--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -86,3 +86,32 @@ Although the classes of the UIKit framework generally do not support KVO, you ca
 	self.navigationController.navigationBar.titleTextAttributes = @{
 	                                                                 NSForegroundColorAttributeName : [NSColor redColor]
 	                                                                };
+																	
+##问题00010 __时间转换问题yyyy-MM-dd / YYYY-MM-DD ?
+
+	描述:
+	
+	var str = "2015-03-28"
+	var date = NSDate()
+	var fms = NSDateFormatter()
+	fms.dateFormat = "yyyy-MM-DD"
+	date = fms.dateFromString(str)!   -> Jan 28, 2015, 12:00 AM
+	fms.dateFormat = "YYYY年MM月"    
+	fms.stringFromDate(date)          -> 2015年1月
+	
+	问题2015-03-28的日期格式应该为 yyyy-MM-dd
+
+[日期格式化部分解释](http://blog.sina.com.cn/s/blog_8020e41101014sy2.html)
+	
+##问题00011 __Collection <__NSArrayM: 0xb550c30> was mutated while being enumerated
+
+	NSArray * array = [NSArray arrayWithArray: arrayTemp];
+ 
+	for (NSDictionary * dic in array) {
+	   if (condition){
+	      [arrayTemp removeObject:dic];
+	   }
+	}
+	
+	错误。不能在遍历数组的同时，增加或删除数组内的数据。
+	
