--- a/New/项目组成.md
+++ b/New/项目组成.md
@@ -5,12 +5,12 @@
 	|	|-------App UI界面
 	|	|   |---kkcharge 充值
 	|	|   |---UserCenter 用户中心
-	|	|   |---NewMainPage 主页
+	|	|   |---NewMainPage 主页－左右Cell选择
 	|	|   |---Login 登陆
 	|	|   |---OilNumber 
 	|	|   |---Order 订单
 	|	|   |---Register 注册
-	|	|   |---GasStationList 主页
+	|	|   |---GasStationList 主页-下拉选择
 	|	|   |---SliderViewController 侧划选单
 	|   |   |---ScanCode 二维码扫描
 	|   |   |---reqParam 请求参数
