--- a/Apple/常用的第三方框架.md
+++ b/Apple/常用的第三方框架.md
@@ -10,7 +10,7 @@
     HUD提示
 ##SDWebImage  
     网络图片加载
-##FLKAutoLayout  
+##FLKAutoLayout     /   Masonry
     自动约束布局
 ##ocmock   
     单元测试（模拟对象）
@@ -22,7 +22,7 @@
     UIImageView category,使图片模糊
 ##TSMessages 
     在屏幕顶部显示提示通知
-##Mantle 
+##Mantle     /  MJExtension
     把JSON原始数据(strings, ints, floats)转换为复杂数据，比如NSDate, NSURL, 甚至是自定义类。
 
 ##XMPPFramework
@@ -46,3 +46,16 @@
 ##MarqueeLabel
 
 	滚动Label
+	
+##FLEX
+[Flipboard开源应用内调试工具FLEX](http://www.cocoachina.com/industry/20140728/9259.html)
+[Flipboard/FLEX](https://github.com/Flipboard/FLEX)
+	Flipboard开源应用内调试工具FLEX
+	
+	
+##JSONKit
+
+	json解析，比官方解析快20%
+	
+##Libextobjc
+Libextobjc是一个非常强大的Objective-C库的扩展,为Objective-C提供诸如Safe categories、Concrete protocols、简单和安全的key paths以及简单使用block中的弱变量等功能。libextobjc非常模块化，只需要一个或者两个依赖就能使用大部分类和模块。
