--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -114,4 +114,16 @@ Although the classes of the UIKit framework generally do not support KVO, you ca
 	}
 	
 	错误。不能在遍历数组的同时，增加或删除数组内的数据。
+
+
+##问题00012 __didMoveToSuperview和awakeFromNib的xuan ze
+
+	//- (void)didMoveToSuperview   //从Xib创建View时，此时View信息为nil
+	//{
+	//    _labelToTopHeight.constant *= [ScreenFactor factorForAutoHeight];
+	//}
 	
+	- (void)awakeFromNib
+	{
+	    _labelToTopHeight.constant *= [ScreenFactor factorForAutoHeight];
+	}
