--- a/Apple/UIView/手势识别器.md
+++ b/Apple/UIView/手势识别器.md
@@ -128,3 +128,36 @@
         – touchesMoved:withEvent:
         – touchesEnded:withEvent:
         - touchesCancelled:withEvent:
+		
+		
+
+<h2>手势冲突问题<h2>
+
+- (BOOL)gestureRecognizerShouldBegin:(UIGestureRecognizer *)gestureRecognizer；
+	手势识别器代理方法，确定当前识别器是否失效
+	
+	
+例子，TableView的纵向滚动和Cell的横向滚动的冲突问题。
+
+```Objc
+
+	- (BOOL)gestureRecognizerShouldBegin:(UIGestureRecognizer *)gestureRecognizer
+	{
+		    if ( gestureRecognizer == self.panGestureRecognizer ) {   	//判断是否是当前手势	
+		        if(self.currentMenuTableCell && self.currentMenuTableCell.menuState != JHMenuTableViewCellState_Common) { //判断Cell是否存在并且Cell不处于关闭状态
+			    	CGPoint point = [gestureRecognizer locationInView:self];	//判断手势在TableView上的点
+			        NSIndexPath *indexPath = [self indexPathForRowAtPoint:point]; //判断此点在tableView上的NSIndexPath位置
+			        JHMenuTableViewCell *cell = (JHMenuTableViewCell *)[self cellForRowAtIndexPath:indexPath]; //拿出此位置的Cell
+			        if(cell != self.currentMenuTableCell) {  //判断位置的Cell是不是当前打开的Cell
+			        	self.currentMenuTableCell.menuState = JHMenuTableViewCellState_Common; //如果不是，关闭当前Cell，并使横向手势失效
+			            return NO;
+			        }
+				}
+            	CGPoint translation = [self.panGestureRecognizer translationInView:self]; //拿出手势的translation
+				return fabs(translation.y) <= fabs(translation.x);  //如果y的绝对值x的绝对值，手势执行
+		    }else {
+				return YES;  //其他添加的手势不做处理
+			}
+	}
+
+```
