--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -127,3 +127,8 @@ Although the classes of the UIKit framework generally do not support KVO, you ca
 	{
 	    _labelToTopHeight.constant *= [ScreenFactor factorForAutoHeight];
 	}
+	
+	
+##问题00013 __ld: framework not found CoreImage for architecture arm64
+
+	Build Sitting -> Architectures -> Base SDK -> 设置为手机当前版本
