--- a/Apple/常用的第三方框架.md
+++ b/Apple/常用的第三方框架.md
@@ -11,6 +11,7 @@
 ##SDWebImage  
     网络图片加载
 ##FLKAutoLayout     /   Masonry
+[Masonry快速上手](http://adad184.com/2014/09/28/use-masonry-to-quick-solve-autolayout/)
     自动约束布局
 ##ocmock   
     单元测试（模拟对象）
@@ -59,3 +60,12 @@
 	
 ##Libextobjc
 Libextobjc是一个非常强大的Objective-C库的扩展,为Objective-C提供诸如Safe categories、Concrete protocols、简单和安全的key paths以及简单使用block中的弱变量等功能。libextobjc非常模块化，只需要一个或者两个依赖就能使用大部分类和模块。
+
+##[chisel](https://github.com/facebook/chisel)
+
+FaceBook XCode LLDB 调试工具
+
+##Classy / ClassyLiveLayout
+
+声明布局，类似CSS
+[实时显示iOS编写UI代码效果](http://ios.jobbole.com/81924/)
