--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -148,3 +148,63 @@ Although the classes of the UIKit framework generally do not support KVO, you ca
 	            view;
 	});
 	用高度为0.1的View代替
+	
+	
+##问题00015 __iOS9中 load an HTTP URL with App Transport Security enabled 
+
+	You can add exceptions for specific domains in your Info.plist:
+		
+		<key>NSAppTransportSecurity</key>
+		<dict>
+		    <key>NSExceptionDomains</key>
+		    <dict>
+		        <key>testdomain.com</key>
+		        <dict>
+		            <key>NSIncludesSubdomains</key>
+		            <false/>
+		            <key>NSExceptionAllowInsecureHTTPSLoads</key>
+		            <false/>
+		            <key>NSExceptionRequiresForwardSecrecy</key>
+		            <true/>
+		            <key>NSExceptionMinimumTLSVersion</key>
+		            <string>TLSv1.2</string>
+		            <key>NSThirdPartyExceptionAllowInsecureHTTPSLoads</key>
+		            <false/>
+		            <key>NSThirdPartyExceptionRequiresForwardSecrecy</key>
+		            <true/>
+		            <key>NSThirdPartyExceptionMinimumTLSVersion</key>
+		            <string>TLSv1.2</string>
+		            <key>NSRequiresCertificateTransparency</key>
+		            <false/>
+		        </dict>
+
+		        ...
+
+		    </dict>
+		</dict>
+		
+	You can also ignore all app transport security restrictions with a single key:
+
+	<key>NSAppTransportSecurity</key>
+	<dict>
+	    <key>NSAllowsArbitraryLoads</key>
+	    <true/>
+	</dict>
+	
+	Further details will follow in the “Networking with NSURLSession” session.
+[How do I load an HTTP URL with App Transport Security enabled in iOS 9?](http://stackoverflow.com/questions/30731785/how-do-i-load-an-http-url-with-app-transport-security-enabled-in-ios-9)
+
+
+##问题00016 preferredStatusBarStyle不执行
+
+	此法的只有在设置了以下代码才会被调用（对于preferredStatusBarStyle不执行问题）：
+	[self.navigationController.navigationBar setBarStyle:UIBarStyleBlack];
+	
+	在iOS 7中，通过上面的方法来修改状态栏风格非常的棒。
+	另外，我们也可以使用UIApplication的statusBarStyle方法来设置状态栏，不过，首先需要停止使用View controller-based status bar appearance。
+	在project target的Info tab中，插入一个新的key，名字为View controller-based status bar appearance，并将其值设置为NO。
+	
+	然后就可以使用下面的代码来设置状态栏风格了：
+	[[UIApplication sharedApplication] setStatusBarStyle:UIStatusBarStyleLightContent];
+
+[iOS 7 修改状态栏preferredStatusBarStyle不执行问题](http://m.blog.csdn.net/blog/zqx654033799/23597509)
