--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -208,3 +208,29 @@ Although the classes of the UIKit framework generally do not support KVO, you ca
 	[[UIApplication sharedApplication] setStatusBarStyle:UIStatusBarStyleLightContent];
 
 [iOS 7 修改状态栏preferredStatusBarStyle不执行问题](http://m.blog.csdn.net/blog/zqx654033799/23597509)
+
+##问题00017 隐藏TabBar后，点击原来TabBar位置不响应
+
+	控制器设置了 self.edgesForExtendedLayout = UIRectEdgeNone;
+	
+	
+##问题00018 控制器的屏幕方向问题
+
+[单独控制控制器旋转](http://www.devdiv.com/forum.php?mod=viewthread&tid=144725)
+	
+	
+##问题00019 zsh: command not found: brew
+
+配置~/.zshrc 
+
+//# User configuration
+export PATH="rvm/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin"
+
+
+##问题00020 git checkout -- .  反悔
+
+被添加到 index 的内容可以找回（Git add）（但是只有文件内容，没有文件名信息，需要人工辨别），没有被添加的部分已经被删除了，你只能求助于另外的办法（备份文件、反删除恢复等）。
+
+如果stage(add)过，还可能可以恢复（前提是不能运行git gc）： 使用 git fsck --lost-found 找到 dangling blob，然后使用 git show <sha_id> 看看这个文件是不是你之前被恢复的。
+
+然后去.git/lost-found/other就能找到blob, 手动恢复。。
