--- a/Git/基础使用.md
+++ b/Git/基础使用.md
@@ -24,3 +24,47 @@
     //如果目录下有文件没有被追踪（未与远端仓库同步），可以使用“ git add 文件名” 和 “ git commit -m "message" ”，来添加追踪文件
     git remote add origin https://coding.net/codingTutorial/gitDemo.git
     git push -u origin master //这两行将该目录下的文件推送到远端（origin）上的 "master" 分支
+
+
+##.gitignore无效，不能过滤某些文件
+
+	利用.gitignore过滤文件，如编译过程中的中间文件，等等，这些文件不需要被追踪管理。
+	现象：
+	在.gitignore添加file1文件，以过滤该文件，但是通过git status查看仍显示file1文件的状态。
+	原因：
+	在git库中已存在了这个文件，之前push提交过该文件。
+	.gitignore文件只对还没有加入版本管理的文件起作用，如果之前已经用git把这些文件纳入了版本库，就不起作用了
+	解决：
+	需要在git库中删除该文件，并更新。
+	然后再次git status查看状态，file1文件不再显示状态。
+	
+	
+##perl: warning: Setting locale failed.
+	perl: warning: Setting locale failed.
+	perl: warning: Please check that your locale settings:
+	LANGUAGE = (unset),
+	LC_ALL = (unset),
+	LANG = “en_US.utf8″
+	are supported and installed on your system.
+	perl: warning: Falling back to the standard locale (“C”).
+
+	执行一下下面语句：
+	export LANGUAGE=en_US.UTF-8
+	export LANG=en_US.UTF-8
+	export LC_ALL=en_US.UTF-8
+	locale-gen en_US.UTF-8
+	apt-get install locales
+	dpkg-reconfigure locales
+
+	完事后把
+	export LANGUAGE=en_US.UTF-8
+	export LANG=en_US.UTF-8
+	export LC_ALL=en_US.UTF-8
+	这三句加到 ~/.bashrc 文件的末尾，让它每次都自动执行
+	
+	
+##mac下~/.bashrc不起作用 
+
+	MAC是一个例外，它会执行bash_profile，但不会去管.bashrc
+
+[douban](http://www.douban.com/note/321472256/)
