--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -234,3 +234,127 @@ export PATH="rvm/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin"
 如果stage(add)过，还可能可以恢复（前提是不能运行git gc）： 使用 git fsck --lost-found 找到 dangling blob，然后使用 git show <sha_id> 看看这个文件是不是你之前被恢复的。
 
 然后去.git/lost-found/other就能找到blob, 手动恢复。。
+
+
+##问题00021 Placing a custom view based UIBarButtonItem in the navigation bar without default horizontal padding
+
+自定义TitleView设置左侧的位置。
+
+	IBarButtonItem *backButtonItem // Assume this exists, filled with our custom view
+
+	// Create a negative spacer to go to the left of our custom back button, 
+	// and pull it right to the edge:
+	UIBarButtonItem *negativeSpacer = [[UIBarButtonItem alloc] 
+	    initWithBarButtonSystemItem:UIBarButtonSystemItemFixedSpace 
+	    target:nil action:nil];
+	negativeSpacer.width = -5; 
+	// Note: We use 5 above b/c that's how many pixels of padding iOS seems to add
+
+	// Add the two buttons together on the left:
+	self.navigationItem.leftBarButtonItems = [NSArray 
+	    arrayWithObjects:negativeSpacer, backButtonItem, nil];
+		
+		
+[StackOverflow](http://stackoverflow.com/questions/4715280/placing-a-custom-view-based-uibarbuttonitem-in-the-navigation-bar-without-defaul)
+
+
+
+
+##问题00022 通过id对象转为结构体数据
+
+1. 常用的结构体
+
+	  	
+		int a = [value intValue];
+		
+		
+2. 不常用的结构体，确认知道结构体类型
+
+		CGAffineTransform values;
+		[value getValue:&values];
+		
+##问题00023 iOS7上leftBarButtonItem无法实现滑动返回
+
+1. 
+
+		可以在pushViewController之后加入如下代码
+		[_currentNav pushViewController:viewController animated:YES];  
+		//开启iOS7的滑动返回效果  
+		if ([_currentNav respondsToSelector:@selector(interactivePopGestureRecognizer)]) {  
+		    _currentNav.interactivePopGestureRecognizer.delegate = nil;  
+		}
+		
+2. 
+
+		在设置leftBarButtonItem之后加上
+		
+		self.navigationItem.backBarButtonItem = backButton;  
+		self.navigationController.interactivePopGestureRecognizer.delegate = self;
+		但这两行代码必须放在viewWillAppear中
+		
+		
+[转自心砚thu的iOS7上leftBarButtonItem无法实现滑动返回的完美解决方案](http://blog.csdn.net/zhaoxy_thu/article/details/15811189)
+
+##问题00024 修改navigationBarHidden后视图切换动画出现奇怪问题 
+
+
+	我有一个基于导航控制器的程序，根视图上有个按钮按下后通过pushViewController显示
+	子视图，因为根视图上有一个image view，所以在根视图的viewWillAppear中把导航控制器的
+	navigationBarHidden改为YES了，而在子视图的viewWillAppear中又把navigationBarHidden改回
+	NO，这样根视图就不显示navigationbar，子视图则显示。但问题是，视图切换的动画出现了问题，
+	具体现象是：当根视图切换到子视图时，在切换动画出现之前，根视图的navigationbar就出现了，
+	而当子视图切换到根视图时，也是在切换动画出现之前，子视图的navigationbar就消失了，在相
+	应位置出现一块难看的白色长条。
+	
+调用这个setNavigationBarHidden:animated:，不要直接修改。 
+
+[修改navigationBarHidden后视图切换动画出现奇怪问题](http://www.cocoachina.com/bbs/read.php?tid-35478.html)
+
+
+##问题00025 自定义返回按钮时，iOS7手势返回遇到的问题
+
+在一级视图中，iOS样式返回的手势滑动一下，然后进入二级视图，发现，画面卡住
+
+
+一级视图中一定要加入self.navigationController.interactivePopGestureRecognizer.enabled = NO;，先把iOS7手势返回屏蔽掉，
+
+到二级视图再用self.navigationController.interactivePopGestureRecognizer.enabled = YES打开。
+
+[自定义返回按钮时，iOS7手势返回遇到的问题](http://www.gowhich.com/blog/view/id/383?utm_source=tuicool)	
+
+
+##问题00026 AMapNaviViewController中MapView为空
+
+	只需要在didPresentNaviViewController回调中再设置下mapview的frame
+	
+[IOS集成导航sdk，显示的导航界面地图空白](http://lbsbbs.amap.com/forum.php?mod=viewthread&tid=6115&extra=page%3D1)
+
+##问题00027 汉子转拼音
+
+
+	NSString *str = [[NSString alloc]initWithFormat:@"嘿嘿"];    
+	//NSString转换为CFStringRef    
+	CFStringRef string1 = (CFStringRef)CFBridgingRetain(str);   
+	NSLog(@"%@",str);    
+	//汉字转换为拼音    
+	CFMutableStringRef string = CFStringCreateMutableCopy(NULL, 0, string1);    
+	//带声调符号的拼音    
+	CFStringTransform(string, NULL, kCFStringTransformMandarinLatin, NO);    
+	NSLog(@"%@",string);    
+	//去掉声调符号   
+	CFStringTransform(string, NULL, kCFStringTransformStripDiacritics, NO);    
+	NSLog(@"%@",string);    
+	//CFStringRef转换为NSString    
+	NSString *aNSString = (NSString *)CFBridgingRelease(string);    
+	//去掉空格    
+	NSString *strUrl = [aNSString stringByReplacingOccurrencesOfString:@" " withString:@""];    
+	NSLog(@"%@",strUrl);  
+  
+            
+	//汉字转换为拼音第二种形式    
+	CFMutableStringRef string2 = CFStringCreateMutableCopy(NULL, 0, CFSTR("哈哈"));    
+	//带声调符号的拼音    
+	CFStringTransform(string2, NULL, kCFStringTransformMandarinLatin, NO);    
+	//去掉声调符号    
+	CFStringTransform(string2, NULL, kCFStringTransformStripDiacritics, NO);    
+	NSLog(@"%@",string2);
