--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -209,6 +209,8 @@ Although the classes of the UIKit framework generally do not support KVO, you ca
 
 [iOS 7 修改状态栏preferredStatusBarStyle不执行问题](http://m.blog.csdn.net/blog/zqx654033799/23597509)
 
+优先修改顶层的状态栏
+
 ##问题00017 隐藏TabBar后，点击原来TabBar位置不响应
 
 	控制器设置了 self.edgesForExtendedLayout = UIRectEdgeNone;
@@ -358,3 +360,130 @@ export PATH="rvm/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin"
 	//去掉声调符号    
 	CFStringTransform(string2, NULL, kCFStringTransformStripDiacritics, NO);    
 	NSLog(@"%@",string2);
+	
+	
+##问题00028 UIButton设置标题连续闪烁的解决方案
+
+	在做一个项目时，用到UIButton来设置接收短信验证码的倒计时，但是用NSTimer来设置标题会出现连续闪烁的问题。
+
+	经过测试发现了一下内容，如果只是单独的设置button的titleLabel的内容则显示不出来效果,如果单独设置标题和状态这种
+	方式在使用了NSTimer后会出现连续闪烁的问题
+
+	此时需要将两个方法同时使用，则不会出现闪烁的问题,即都设置
+
+	Objective-C
+	self.titleLabel.text = title;
+	[self setTitle:title forState:UIControlStateDisabled];
+	
+	
+##问题00029 集成支付宝 报错：rsa_private read error : private key is NULL 
+
+
+	两中解决方法
+	1解决方法：
+	1）在RSADataSigner.m文件中 搜索代码 [result appendString:@"-----BEGIN PRIVATE KEY-----\n"]; 将其改成 [result appendString:@"-----BEGIN RSA PRIVATE KEY-----\n"];
+	2）在RSADataSigner.m文件中 搜索代码 [result appendString:@"\n-----END PRIVATE KEY-----"]; 将其改成 [result appendString:@"\n-----END RSA PRIVATE KEY-----"];
+
+
+	2解决方法:   
+
+
+	A、将私钥转成PKCS8替换一下原私钥即可
+
+	1、生成私钥pem,  执行命令  openssl genrsa -out rsa_private_key.pem 1024
+	2、生成公钥,执行命令  openssl rsa -in rsa_private_key.pem -pubout -out rsa_public_key.pem
+	3、 将RSA私钥转换成PKCS8格式,命令执行  openssl pkcs8 -topk8 -inform PEM -in rsa_private_key.pem -outform PEM -nocrypt 
+	（ PHP服务端语言读取私钥不需要PKCS8转换）
+	\
+	
+##问题00030 无Crash信息 libc++abi.dylib: terminating with uncaught exception of type NSException
+
+	友盟默认是打开崩溃收集机制的。
+	要关闭它的话，只要在[MobClick startWithAppkey:kUmengAppKey reportPolicy:REALTIME channelId:channelID];
+	前加上[MobClick setCrashReportEnabled:NO];就可以解决该问题了。
+	若是集成了非友盟的其他崩溃收集平台且出现该问题，也可以尝试暂时关闭该功能，若关闭后调试框能出现崩溃原因及堆栈，那么几乎就可以定位是该平台造成的原因了。
+	
+[Terminate_handler Unexpectedly Threw an Exception无法显示崩溃原因和调用堆栈的分析及解决](http://www.smilexiaofeng.com/blog/2015/09/17/nsscanner-nil-string-argument-and-terminate-handler-unexpectedly-threw-an-exception-no-reason-and-crash-stack/)
+
+
+##问题00031 NSUserDefaults插入报错attempt to insert non-property list object
+
+	这种错误的原因是插入了不识别的数据类型，NSUserDefaults支持的数据类型有NSString、 NSNumber、NSDate、 NSArray、NSDictionary、BOOL、NSInteger、NSFloat等系统定义的数据类型。
+	自定义的类型需要转成NSData再存入。
+	
+##问题00032 iOS 支付宝成功后没有跳转
+
+	设置appScheme
+	并且appScheme里无特殊字符_
+	
+	
+##问题00033 如何判断代码运行在DEBUG还是RELEASE模式下？
+
+	首先确定下项目的 Build Settings 是否已经设置过宏定义 DEBUG，如何看呢？
+
+	点击 Build Settings ，然后在搜索框里输入‘macros’
+	
+	如果已经设置过，在 Preprocessor Macros 的 Debug 后面会有 DEBUG=1，如果没有，就手动设置下。
+
+	接下来就可以这样做了
+
+		#ifdef DEBUG
+		    //do sth.
+		#else
+		    //do sth.
+		#endif
+	
+	http://stackoverflow.com/a/9063682
+	一般Apple已经为我们设置好了 DEBUG 的宏定义，所以，我们只要让 NSLog 在 DEBUG 模式下失效就好了，这样能让我们的程序运行起来更加稳定，同时我们也可以继续使用正规的 NSLog。
+
+
+	//put this in prefix.pch
+
+		#ifndef DEBUG
+		#undef NSLog
+		#define NSLog(args, ...)
+		#endif
+	
+##问题00034 NSMutableAttributedString addAttributes增加颜色无效的问题
+
+http://www.csdn123.com/html/itweb/20131101/200299.htm
+	下面是代码，被注释掉的是原来的代码，指定颜色不生效。
+
+	NSMutableAttributedString *attriString = [[[NSMutableAttributedStringalloc] initWithString:string] autorelease];
+
+	    NSRange range;
+
+	    range.location = 4;
+
+	    range.length = nameString.length;
+
+	    [attriString removeAttribute:(NSString *)kCTFontAttributeNamerange:range];
+
+	    if ([SYSTEM_VERSION intValue] >= 6.0) {
+
+	        [attriString addAttribute:NSForegroundColorAttributeNamevalue:[UIColorredColor] range:range];
+
+	    }
+
+	    else{
+
+	        [attriString addAttribute:(NSString *)kCTForegroundColorAttributeNamevalue:(id)[UIColorredColor].CGColorrange:range];
+
+	    }
+
+	    [attriString addAttribute:(NSString *)kCTFontAttributeNamevalue:(id)[UIFontsystemFontOfSize:15] range:range];
+
+	//    [attriString addAttributes:[NSDictionary dictionaryWithObjectsAndKeys:
+
+	//                               (id)[UIFont systemFontOfSize:15],(NSString *)kCTFontAttributeName,
+
+	//                                (id)RGBCOLOR(0, 255, 255),(NSString *)kCTForegroundColorAttributeName,
+
+	//                                nil]
+
+	//                         range:range];
+
+	    [self.auntName setAttributedText:attriString];
+		
+		
+可能由于之前使用kCTForegroundColorAttributeNamevalue去设置了颜色，当再用NSForegroundColorAttributeNamevalue出现此问题
